added optron image

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <img src="optron-doodle.png">
+  </body>
+  <footer>
+    
+  </footer>
+</html>
  
