--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="styles/index.css" type="text/css" rel="stylesheet">
-  </head>
-  <body>
-    <table>
-      <tr>
-	<th>Home</th>
-	<th>About</th>
-      </tr>
-    </table>
-    <div id="main">
-      <div id="ui-block">
-	<h1>
-	  Optron
-	</h1>
-	<h2>
-	  Cello Optimizer Tool
-	</h2>
-	<div id="inputs">
-	  <h3>Cello Username</h3>
-	  <input type="text" id="cello-username"><br>
-	  <h3>Cello Password</h3>
-	  <input type="text" id="cello-password"><br>
-	  <h3>UCF File</h3>
-	  <input type="file" id="ucf-selector"><br>
-	  <h3>Verilog File</h3>
-	  <input type="file" id="verilog-file"><br>
+    <head>
+	<link href="styles/index.css" type="text/css" rel="stylesheet">
+    </head>
+    <body>
+	<table>
+	    <tr>
+		<th>Home</th>
+		<th>About</th>
+	    </tr>
+	</table>
+	<div id="main">
+	    <div id="ui-block">
+		<h1>
+		    Optron
+		</h1>
+		<h2>
+		    Cello Optimizer Tool
+		</h2>
+		<div id="inputs">
+		    <h3>Cello Username</h3>
+		    <input type="text" id="cello-username"><br>
+		    <h3>Cello Password</h3>
+		    <input type="text" id="cello-password"><br>
+		    <h3>UCF File</h3>
+		    <input type="file" id="ucf-selector"><br>
+		    <h3>Verilog File</h3>
+		    <input type="file" id="verilog-file"><br>
+		    <input type="button" id="submit-button" onclick="onSubmitPressed()" value="Submit">
+		</div>
+	    </div>
+	    <div id="optron-img">
+		<img src="optron-doodle.png" id="optron-pic">
+	    </div>
 	</div>
-      </div>
-      <div id="optron-img">
-	<img src="optron-doodle.png" id="optron-pic">
-      </div>
-    </div>
-  </body>
+    </body>
+    <footer>
+	<script src="scripts/index.js" type="text/javascript"></script>
+    </footer>
 </html>
 
