--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 		</h2>
 		<div id="inputs">
 		    <h3>Cello Username</h3>
-		    <input type="text" id="cello-username"><br>
+		    <input type="text" autocomplete="off" autocorrect="off"
+			   autocapitalize="off" spellcheck="false" id="cello-username"><br>
 		    <h3>Cello Password</h3>
-		    <input type="text" id="cello-password"><br>
+		    <input type="password" id="cello-password"><br>
 		    <h3>UCF File</h3>
 		    <input type="file" id="ucf-selector"><br>
 		    <h3>Verilog File</h3>
