--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		    <h3>UCF File</h3>
 		    <input type="file" id="ucf-selector"><br>
 		    <h3>Verilog File</h3>
-		    <input type="file" id="verilog-file"><br>
+		    <input type="file" id="verilog-selector"><br>
 		    <input type="button" id="submit-button" onclick="onSubmitPressed()" value="Submit">
 		</div>
 	    </div>
