--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
 		<img src="optron-doodle.png" id="optron-pic">
 	    </div>
 	</div>
+	<button id="modalBtn">Open Modal</button>
+	<div id="modal" class="modal">
+	    <div class="modal-content">
+		<span class="close">&times;</span>
+		<p id="modal-msg"></p>
+		<input type="button" id="download-button" onclick="onDownloadUCFPressed()" value="Download UCF">
+	    </div>
+	</div>
     </body>
     <footer>
 	<script src="scripts/index.js" type="text/javascript"></script>
