added default values to advanced options

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 			<summary id="adv-options">Advanced Options</summary>
 			<h3>Job Id</h3>
 			<input type="text" autocomplete="off" autocorrect="off"
-			       autocapitalize="off" spellcheck="false" id="jobid">
+			       autocapitalize="off" spellcheck="false" id="jobid" value="OptronSweep">
 			<h3>Results file name</h3>
 			<input type="text" autocomplete="off" autocorrect="off"
-			       autocapitalize="off" spellcheck="false" id="results-fname">
+			       autocapitalize="off" spellcheck="false" id="results-fname" value="Results.txt">
 		    </details>
 		    <input type="button" id="submit-button" onclick="onSubmitPressed()" value="Submit">
 		    <div class="loader" id="loader"></div>
